# aiida-pseudo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.json  setup.py
.github/workflows/: cd.yml  ci.yml  update_changelog.py  validate_release_tag.py
aiida_pseudo/: __init__.py
aiida_pseudo/cli/: __init__.py  family.py  install.py  list.py  root.py  show.py  utils.py
aiida_pseudo/cli/params/: __init__.py  arguments.py  options.py  types.py
aiida_pseudo/common/: __init__.py  units.py
aiida_pseudo/data/: __init__.py
aiida_pseudo/data/pseudo/: __init__.py  jthxml.py  pseudo.py  psf.py  psml.py  psp8.py  upf.py  vps.py
aiida_pseudo/groups/: __init__.py
aiida_pseudo/groups/family/: __init__.py  cutoffs.py  pseudo.py  pseudo_cutoff.py  pseudo_dojo.py  pseudodojo.py  psf.py  psml.py  psp8.py  sssp.py  upf.py
aiida_pseudo/groups/mixins/: cutoffs.py
aiida_pseudo/utils/: fastentrypoints.py
alberto/: README.md  cutoffs.json  install_sssp.py
alberto/pseudos_dir/: Ac.us.pbesol.z_11.ld1.psl.v1.0.0-high.upf  Ag.nc.pbesol.z_19.oncvpsp4.spms.v1.upf  Al.us.pbesol.z_3.ld1.psl.v1.0.0-low.upf  Am.us.pbesol.z_17.ld1.psl.v1.0.0-high.upf  Ar.paw.pbesol.z_8.ld1.psl.v1.0.0-low.upf  As.paw.pbesol.z_15.atompaw.jth.v1.1-std.upf  At.us.pbesol.z_17.ld1.psl.v1.0.0-high.upf  Au.nc.pbesol.z_19.oncvpsp4.spms.v1.upf  B.paw.pbesol.z_3.atompaw.jth.v1.1-std.upf  Ba.nc.pbesol.z_10.oncvpsp4.dojo.v0.5.0-std.upf  Be.us.pbesol.z_2.ld1.psl.v1.0.0-low.n.upf  Bi.us.pbesol.z_15.uspp.gbrv.v1.upf  Br.nc.pbesol.z_7.oncvpsp4.spms.v1.upf  C.us.pbesol.z_4.uspp.gbrv.v1.2.upf  Ca.us.pbesol.z_10.uspp.gbrv.v1.upf  Cl.us.pbesol.z_7.ld1.psl.v1.0.0-high.upf  Co.nc.pbesol.z_17.oncvpsp4.spms.v1.upf  Cr.us.pbesol.z_14.uspp.gbrv.v1.5.upf  Cs.nc.pbesol.z_9.oncvpsp4.spms.v1.upf  Cu.paw.pbesol.z_11.ld1.psl.v1.0.0-low.upf  F.us.pbesol.z_7.ld1.psl.v0.1.upf  Fe.paw.pbesol.z_16.ld1.psl.v0.2.1.upf  Fr.paw.pbesol.z_19.ld1.psl.v1.0.0-high.upf  Ga.paw.pbesol.z_13.atompaw.jth.v1.1-std.upf  Ge.us.pbesol.z_14.uspp.gbrv.v1.4.upf  H.us.pbesol.z_1.ld1.psl.v1.0.0-high.upf  He.paw.pbesol.z_2.ld1.psl.v1.0.0-high.upf  Hf.nc.pbesol.z_26.oncvpsp4.sg15.v0.upf  Hg.us.pbesol.z_12.uspp.gbrv.v1.upf  I.us.pbesol.z_7.uspp.gbrv.v1.upf  In.us.pbesol.z_13.ld1.psl.v0.2.2.upf  Ir.nc.pbesol.z_17.oncvpsp4.spms.v1.upf  K.nc.pbesol.z_9.oncvpsp4.sg15.v0.upf  Li.us.pbesol.z_3.uspp.gbrv.v1.4.upf  Mg.us.pbesol.z_10.uspp.gbrv.v1.4.upf  Mn.us.pbesol.z_15.uspp.gbrv.v1.5.upf  N.paw.pbesol.z_5.ld1.psl.v0.1.upf  Na.paw.pbesol.z_9.ld1.psl.v0.2.upf  Ne.paw.pbesol.z_8.ld1.psl.v1.0.0-high.upf  Ni.nc.pbesol.z_18.oncvpsp4.spms.v1.upf  (+36 more)
docs/source/: cli.rst  conf.py  design.rst  dev.md  howto.rst  index.rst  troubleshooting.rst
docs/source/_static/: aiida-pseudo-custom.css
src/aiida_pseudo/: __init__.py
src/aiida_pseudo/cli/: __init__.py  family.py  install.py  list.py  root.py  utils.py
src/aiida_pseudo/cli/params/: __init__.py  arguments.py  options.py  types.py
src/aiida_pseudo/common/: __init__.py  units.py
src/aiida_pseudo/data/: __init__.py
src/aiida_pseudo/data/pseudo/: __init__.py  jthxml.py  pseudo.py  psf.py  psml.py  psp8.py  upf.py  vps.py
src/aiida_pseudo/groups/: __init__.py
src/aiida_pseudo/groups/family/: __init__.py  cutoffs.py  pseudo.py  pseudo_dojo.py  sssp.py
src/aiida_pseudo/groups/mixins/: __init__.py  cutoffs.py
tests/: __init__.py  conftest.py  pytest.ini
tests/cli/: __init__.py  test_commands.py  test_family.py  test_install.py  test_list.py  test_root.py  test_show.py  test_utils.py
tests/cli/params/: __init__.py  test_types.py
tests/data/: __init__.py
tests/data/pseudo/: __init__.py  test_common.py  test_jthxml.py  test_pseudo.py  test_psf.py  test_psml.py  test_psp8.py  test_upf.py  test_vps.py
tests/fixtures/pseudos/: Kr.upf  Rn.upf
tests/fixtures/pseudos/jthxml/: Ar.jthxml  He.jthxml  Ne.jthxml
tests/fixtures/pseudos/psf/: Ar.psf  He.psf  Ne.psf
tests/fixtures/pseudos/psml/: Ar.psml  He.psml  Ne.psml
tests/fixtures/pseudos/psp8/: Ar.psp8  He.psp8  Ne.psp8
tests/fixtures/pseudos/upf/: Ar.upf  He.upf  Kr.upf  Ne.upf  Rn.upf
tests/fixtures/pseudos/vps/: Ar.vps  He.vps  Ne.vps
tests/groups/: __init__.py
tests/groups/family/: __init__.py  test_pseudo.py  test_pseudo_dojo.py  test_psf.py  test_psml.py  test_psp8.py  test_sssp.py  test_upf.py
tests/groups/mixins/: __init__.py  test_cutoffs.py
