[metadata]
author = Sebastiaan P. Huber
author_email = mail@sphuber.net
name = aiida-pseudo
version = attr: aiida_pseudo.__version__
description = AiiDA plugin that simplifies working with pseudo potentials
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/aiidateam/aiida-pseudo
classifiers =
    Development Status :: 4 - Beta
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires >= 3.6
install_requires =
    aiida-core~=1.4
    click~=7.0
    click-completion~=0.5
    pint~=0.16.1
    psycopg2-binary<2.9
    requests~=2.20

[options.extras_require]
docs =
    docutils~=0.17.0
    sphinx~=3.2
    sphinx-copybutton~=0.3.0
    sphinx-book-theme~=0.0.39
    sphinx-autoapi~=1.8.1
    sphinx-click~=2.7.1
pre-commit =
    pre-commit~=2.2
    pylint~=2.6
    pylint-aiida~=0.1
tests =
    pgtest~=1.3
    pytest~=5.4

[options.entry_points]
console_scripts =
    aiida-pseudo = aiida_pseudo.cli:cmd_root
aiida.data =
    pseudo = aiida_pseudo.data.pseudo.pseudo:PseudoPotentialData
    pseudo.jthxml = aiida_pseudo.data.pseudo.jthxml:JthXmlData
    pseudo.psf = aiida_pseudo.data.pseudo.psf:PsfData
    pseudo.psml = aiida_pseudo.data.pseudo.psml:PsmlData
    pseudo.psp8 = aiida_pseudo.data.pseudo.psp8:Psp8Data
    pseudo.upf = aiida_pseudo.data.pseudo.upf:UpfData
    pseudo.vps = aiida_pseudo.data.pseudo.vps:VpsData
aiida.groups =
    pseudo.family = aiida_pseudo.groups.family.pseudo:PseudoPotentialFamily
    pseudo.family.cutoffs = aiida_pseudo.groups.family.cutoffs:CutoffsPseudoPotentialFamily
    pseudo.family.pseudo_dojo = aiida_pseudo.groups.family.pseudo_dojo:PseudoDojoFamily
    pseudo.family.sssp = aiida_pseudo.groups.family.sssp:SsspFamily
